# cp2020-2021_g32_42648_52701_53042

./: .gitignore  CMakeLists.txt  LICENSE  Module1.bas  README.md  ResultadosSeq.txt  cp2020-2021_g32_42648_52701_53042.ipr  cp2020-2021_g32_42648_52701_53042.iws  dados-cp.xlsm  data.xlsx  dataprocessing.bas
Results/: MEDIA-STD.bas  dados-cp.xlsm  dados-cp.xlsx  data-martim.xlsx
Src/: Makefile  README  automated_tests.sh  dataprocessing.bas  energy_storms.c  energy_storms_omp  energy_storms_omp.c  energy_storms_seq  energy_storms_seq.c  generate_random_dataset_from_normal_distribution.py  sequential_tests.sh  tests.sh
Src/results_test_files/test_set_01_1/: .~lock.test-1.csv#  test-1.csv  test-2.csv  test-3.csv  test-4.csv
Src/results_test_files/test_set_01_2/: test-1.csv  test-2.csv  test-3.csv  test-4.csv
Src/results_test_files/test_set_02_1/: test-1.csv  test-2.csv
Src/results_test_files/test_set_02_2/: test-1.csv
Src/results_test_files/test_set_03_04_05_06_1/: test-1.csv
Src/results_test_files/test_set_03_1/: test-1.csv
Src/results_test_files/test_set_04_1/: test-1.csv
Src/results_test_files/test_set_05_1/: test-1.csv
Src/results_test_files/test_set_06_1/: test-1.csv
Src/results_test_files/test_set_07_1/: test-1.csv  test-2.csv  test-3.csv  test-4.csv
Src/results_test_files/test_set_07_2/: test-1.csv  (+1 more)
Src/selected-test-cases-csvs/: gustafson-law.xlsx  test-cases-1-2-3.xlsx
Src/test_files/: scaled_test_01_a30k_p10k  scaled_test_01_a30k_p120k  scaled_test_01_a30k_p20k  scaled_test_01_a30k_p40k  scaled_test_01_a30k_p60k  scaled_test_01_a30k_p80k  scaled_test_02_a30k_p100k  scaled_test_02_a30k_p200k  scaled_test_02_a30k_p400k
Templates/IEEEtran/: bare_jrnl_compsoc.tex
(+5 files in other folders)
